--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tailwindcss -i ./styles.css -o ./output.css"
+  "build": "npx tailwindcss -i ./styles.css -o ./dist/output.css --minify"
   },
   "keywords": [],
   "author": "",
