--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss-cli -i ./styles.css -o ./dist/output.css --minify"
+    "build": "npx tailwindcss-cli -i ./styles.css -o ./dist/output.css --minify && copy index.html dist\\index.html"
+
   },
   "keywords": [],
   "author": "",
