--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-  "build": "npx tailwindcss-cli -i ./styles.css -o ./public/output.css --minify"
+  "build": "npx tailwindcss -i ./styles.css -o ./public/output.css --minify"
   },
   "keywords": [],
   "author": "",
